2005-05-31 12:50 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotTriangleZone) dump arrays to tecplot file.

2005-05-29 15:35 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c (gridNumberOfInvalidCells) count invalid cells and
	swap to fix (about half).

2005-05-29 14:33 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotInvalid) removed to fix gridmetric depend.
	* src/gridmetric.c (gridWriteTecplotInvalid) added (requires gridAR).

2005-05-29 14:25 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c started a --validate option to test and validate cost
	* src/unit_main.c added gridCOST_CNST_AREAUV to gridSetCostConstraint

2005-05-29 13:45 Mike Park  <mike.park@nasa.gov>

	* src/grid.c (gridWriteTecplotInvalid) added to dump surf
	and invalid tets.
	* src/gridfortran.c (gridwritetecplotsurfacezone_) simplified
	and called gridWriteTecplotInvalid.

2005-05-29 13:20 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio) use ratio to calculate new
	edge and face parameters.

2005-05-29 13:12 Mike Park  <mike.park@nasa.gov>

	* src/gridinsert.c (gridSplitEdgeRatio,gridSplitEdgeAt) changed 
	gridSplitEdgeAt into gridSplitEdgeRatio to allow for consistant
	treatment of CAD edge and face parameters.
	* src/gridinsert.c (gridParallelEdgeSplit) calls gridSplitEdgeRatio

2005-05-29 12:20 Mike Park  <mike.park@nasa.gov>

	* src/unit_main.c Removed -m gridmove projection option.
	Always use gridmove to project.

2005-04-22 12:00 Bill Jones <w.t.jones@larc.nasa.gov>
	* src/gridfortran.c added gridcopyunusednodeGlobal() and
	gridcopyunusedcellGlobal() functions to support new parallel removal
	of unused data.

2005-04-18 17:10 Bill Jones <w.t.jones@larc.nasa.gov>
	* src/FAKEGeom.h updated signature of LoadModel for CAPRI 2 use
	* src/FAKEGeomExtras.c updated signature of LoadModel for CAPRI 2 use

2005-04-18 16:10 Bill Jones <w.t.jones@larc.nasa.gov>
	* src/grid.h (struct Grid) "model" member added unconditionally